1028 - Report contrast errors fixed to WCAG AAA

--- a/arches_her/media/css/report_templates.css
+++ b/arches_her/media/css/report_templates.css
@@ -89,7 +89,7 @@
 
 .aher-report-name {
     padding-right: 5px;
-    color: #888;
+    color: #595959;
     font-size: 14px;
 }
 
@@ -122,7 +122,7 @@
 }
 
 .aher-report-a {
-    color: steelblue !important;
+    color: #315B7D !important;
     font-size: 13px;
     padding: 3px 8px;
 }
@@ -647,7 +647,7 @@ h3.shim:hover {
 
 .aher-nodata-note {
     font-size: 14px;
-    color: #888;
+    color: #595959;
     margin-bottom: 20px;
     margin-left: 10px;
     display: inline-block;
@@ -704,7 +704,7 @@ h3.shim:hover {
 }
 
 .aher-summary-report .aher-summary-block .aher-block-attributes:last-of-type {
-    padding-bottom: 10px; 
+    padding-bottom: 10px;
     border-bottom: 1px solid #ddd;
 }
 
@@ -737,13 +737,13 @@ h3.shim:hover {
 }
 
 .aher-block-value {
-    color: #777;
+    color: #595959;
     display: inline-block;
     font-size: 15px;
 }
 
 .aher-block-value a {
-    color: #777;
+    color: #595959;
 }
 
 a.aher-block-value-url {
